--- a/cluster.yaml
+++ b/cluster.yaml
@@ -268,6 +268,9 @@
     - name: ganglia-gmetad
       yum:  name=ganglia-gmetad state=present
       
+    - name: php bc-math
+      yum: name={{myrepo}}/php-bcmath-5.4.16-36.1.el7_2.1.x86_64.rpm
+      
     - name: ganglia-web
       yum:  name=ganglia-web state=present
     
