--- a/cluster.yaml
+++ b/cluster.yaml
@@ -258,6 +258,11 @@
 
   tasks:
 
+    - name: Apache http server
+      yum: name=httpd state=present
+      
+    - name: httpd service
+      service: name=httpd enabled=yes state=present
 
     - name: cloudera-manager-daemons
       yum: name=cloudera-manager-daemons.x86_64 state=present
