--- a/cluster.yaml
+++ b/cluster.yaml
@@ -262,7 +262,7 @@
       yum: name=httpd state=present
       
     - name: symlink www dir to ganglia
-      file: src=/var/www/html/ganglia dest=/usr/share/ganglia owner=root group=root state=link
+      file: src=/usr/share/ganglia dest=/var/www/html/ganglia owner=root group=root state=link
       
     - name: httpd service
       service: name=httpd enabled=yes state=running
