Add startup of mysqld

--- a/cluster.yaml
+++ b/cluster.yaml
@@ -152,7 +152,7 @@
       yum: name=mysql-connector-java state=present
       
     - name: mysql enabled
-      yum: name=mysqld enabled=yes state=started
+      service: name=mysqld enabled=yes state=started
 
 
 - hosts: alldn 
