--- a/cluster.yaml
+++ b/cluster.yaml
@@ -128,7 +128,7 @@
       get_url: url={{myrepo}}/cloudera-manager.repo dest=/etc/yum.repos.d/cloudera-manager.repo force=yes mode=644
 
     - name: yum cloudera-manager-agent
-      yum: name=cloudera-manager-agent.x86_64 state=latest
+      yum: name=cloudera-manager-agent.x86_64* state=latest
 
     - name: started - cloudera-scm-agent
       service: name=cloudera-scm-agent enabled=yes state=running
@@ -286,10 +286,10 @@
       service: name=httpd enabled=yes state=running
 
     - name: cloudera-manager-daemons
-      yum: name=cloudera-manager-daemons.x86_64 state=present
+      yum: name=cloudera-manager-daemons.x86_64* state=latest
 
     - name: cloudera-manager-server
-      yum: name=cloudera-manager-server.x86_64 state=latest
+      yum: name=cloudera-manager-server.x86_64* state=latest
 
     #- name: cloudera-manager-server-db-2
     #  yum: name=cloudera-manager-server-db-2.x86_64 state=present
