--- a/cluster.yaml
+++ b/cluster.yaml
@@ -289,7 +289,7 @@
       yum: name=cloudera-manager-daemons.x86_64* state=latest
 
     - name: cloudera-manager-server
-      yum: name=cloudera-manager-server.x86_64* state=latest
+      yum: name=cloudera-manager-server* state=latest
 
     #- name: cloudera-manager-server-db-2
     #  yum: name=cloudera-manager-server-db-2.x86_64 state=present
