--- a/cluster.yaml
+++ b/cluster.yaml
@@ -143,7 +143,7 @@
       service: name=gmond enabled=yes state=started 
     
     - name: yum - update all cloudera 
-      yum: name=* enablerepo=cloudera state=latest
+      yum: name=* enablerepo=cloudera-manager state=latest
   
 
 - hosts: allmaster  
