--- a/cluster.yaml
+++ b/cluster.yaml
@@ -112,6 +112,9 @@
 
     - name:  vm.overcommit_memory = 1
       sysctl: name=vm.overcommit_memory value=1 state=present
+      
+    - name: apply systemctl settings
+      command: sysctl -p
 
     - name: Turn off swap
       command: swapoff -a
