--- a/cluster.yaml
+++ b/cluster.yaml
@@ -136,8 +136,8 @@
     - name: yum cloudera-manager-agent
       yum: name=cloudera-manager-agent.x86_64 state=present
 
-    #- name: started - cloudera-scm-agent
-    #  service: name=cloudera-scm-agent enabled=yes state=started
+    - name: started - cloudera-scm-agent
+      service: name=cloudera-scm-agent enabled=no
 
     - name: mysql-connector-java
       yum: name=mysql-connector-java state=present
@@ -286,8 +286,8 @@
     #- name: cloudera-manager-server-db-2
     #  yum: name=cloudera-manager-server-db-2.x86_64 state=present
 
-    #- name: cloudera-scm-server 
-    #  service: name=cloudera-scm-server enabled=yes state=started
+    - name: cloudera-scm-server 
+      service: name=cloudera-scm-server enabled=no 
     
     - name: ganglia-gmetad
       yum:  name=ganglia-gmetad state=present
