--- a/cluster.yaml
+++ b/cluster.yaml
@@ -266,8 +266,11 @@
     - name: hadoopadm .bash_profile
       get_url: url={{myrepo}}/pocappid_bash_profile dest=/home/pocappid/.bash_profile force=yes mode=644 owner=pocappid group=pocappid
     
-    - name: rbutils 
-      unarchive: src={{myrepo}}/rbutils-full-0.13.tar.gz dest=/usr/share/java/ copy=no #copy=no is required to fetch from https, otherwise defaults to playbook dir
+    - name: rbutils source
+      unarchive: src={{myrepo}}/rbutils-src-0.13.tar.gz dest=/usr/share/java/ copy=no #copy=no is required to fetch from https, otherwise defaults to playbook dir
+      
+      - name: rbutils source
+      unarchive: src={{myrepo}}/rbutils-bin-0.13.tar.gz dest=/usr/share/java/ copy=no #copy=no is required to fetch from https, otherwise defaults to playbook dir
   
       
   
