--- a/cluster.yaml
+++ b/cluster.yaml
@@ -269,7 +269,7 @@
     - name: rbutils source
       unarchive: src={{myrepo}}/rbutils-src-0.13.tar.gz dest=/usr/share/java/ copy=no #copy=no is required to fetch from https, otherwise defaults to playbook dir
       
-      - name: rbutils source
+    - name: rbutils bin
       unarchive: src={{myrepo}}/rbutils-bin-0.13.tar.gz dest=/usr/share/java/ copy=no #copy=no is required to fetch from https, otherwise defaults to playbook dir
   
       
